--- a/src/features/products/components/SelectedProduct/Selected.css
+++ b/src/features/products/components/SelectedProduct/Selected.css
@@ -1,7 +1,7 @@
 .selectedProduct {
   border: rgb(239, 239, 239) 2px solid;
   border-radius: 15px;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: white;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.05), 0 4px 20px 0 rgba(0, 0, 0, 0.05);
 }
@@ -39,13 +39,12 @@
 }
 
 .discount {
-  color: red;
   font-size: 0.8rem;
   min-height: 18px;
 }
 
 .tprice {
-  color: #59345f;
+  color: #1c0c1e;
   font-weight: bold;
   font-size: 0.9rem;
 }
