--- a/src/shared/components/Navbar/Navbar.css
+++ b/src/shared/components/Navbar/Navbar.css
@@ -353,6 +353,9 @@ input:hover {
   width: 1rem;
   height: 1rem;
 }
+.shopOffCanvesHead{
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+}
 .shopOffCanvesHead .offcanvas-title {
   margin-left: auto;
   margin-right: auto;
@@ -365,26 +368,54 @@ input:hover {
 .shopOffCanvesHead .btn-close:active {
   box-shadow: none !important;
 }
+.shopOffCanvesBody {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 1rem;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+}
+.shopOffCanvesBody::-webkit-scrollbar {
+  display: none;
+}
 .shopOffCanvesBody .cart-item {
   border: 1px solid #bdbdbd;
   border-radius: 16px;
-  padding: 12px;
+  flex: 1;
+  overflow-y: auto;
+  padding: 1rem;
+  box-shadow: 0 -6px 12px rgba(0, 0, 0, 0.05);
+  max-height: calc(100vh - 220px);
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+
+  -ms-overflow-style: none;
 }
-.shopOffCanvesBody .final {
-  position: absolute;
+
+.cart-items::-webkit-scrollbar {
+  display: none;
+}
+.cart-summary {
+  padding: 1rem;
+  /* border-top: 1px solid #eaeaea; */
+  background-color: #fff;
+  position: sticky;
   bottom: 0;
-  right: 16px;
-  left: 16px;
-  margin-left: auto;
-  margin-right: auto;
+  z-index: 10;
+  margin-top: auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 0px 0px 10px 10px;
 }
+
 .shopOffCanvesBody .buy {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   border: none;
   background-color: var(--primary-color);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: none !important;
 }
 .shopOffCanvesBody .buy:hover,
 .shopOffCanvesBody .buy:active {
@@ -479,10 +510,10 @@ input:hover {
   min-width: 400px;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   z-index: 9999;
 }
-.menu-item{
+.menu-item {
   padding: 10px;
 }
 .mega-menu {
@@ -493,10 +524,10 @@ input:hover {
   min-width: 400px;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   z-index: 9999;
 }
-.menu-item{
+.menu-item {
   padding: 10px;
 }
 
@@ -507,31 +538,30 @@ input:hover {
   background: white;
   min-width: 120px;
   border-radius: 8px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   z-index: 9999;
 }
 
 .products-trigger {
   display: inline-flex;
   align-items: center;
-  gap: 6px;         
+  gap: 6px;
   white-space: nowrap;
 }
 
-
 .dropdown-icon {
-  transition: transform .2s ease;
+  transition: transform 0.2s ease;
 }
 
 .dropdown-icon.open {
   transform: rotate(180deg);
 }
-.logout{
+.logout {
   display: flex !important;
-  justify-content: space-between ;
+  justify-content: space-between;
   width: 100%;
 }
-.badge{
+.badge {
   color: white;
   background-color: var(--primary-color);
   border-radius: 50px;
@@ -545,7 +575,13 @@ input:hover {
 }
 
 @keyframes cartPop {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.2); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
